--- a/app/index.html
+++ b/app/index.html
@@ -36,10 +36,8 @@
             e((Inner circle))-->f(,.?!+-*ز);
             style e red;
       </textarea>
-      <button class="js-mermaid-build">Build it!</button>
-      <div class="js-mermaid-target">
-
-      </div>
+      <button class="js-mermaid-build">Build Graph!</button>
+      <div class="js-mermaid-target"></div>
     </div>
 
 
