--- a/index.html
+++ b/index.html
@@ -9,9 +9,4 @@
             di-->ro2(Rounded square shape);
             e((Inner circle))-->f(,.?!+-*ز);
             style e red;
-      </textarea> <button class=js-mermaid-build>Build it!</button> <div class=js-mermaid-target> </div> </div> <script src=scripts/38ef3709.vendor.js></script> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. --> <script>(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');</script> <script src=scripts/f7425684.main.js></script>  
+      </textarea> <button class=js-mermaid-build>Build Graph!</button> <div class=js-mermaid-target></div> </div> <script src=scripts/b0cd228c.vendor.js></script> <script src=scripts/f7425684.main.js></script>  
